Add generator for API Endpoints

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
   "require-dev": {
     "phpunit/phpunit": "3.7.*",
     "squizlabs/php_codesniffer": "1.*",
-    "phpmd/phpmd" : "1.4.*"
+    "phpmd/phpmd" : "1.4.*",
+    "twig/twig": "1.*"
   },
   "autoload": {
     "psr-0": {
