--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "3.7.*",
+    "mockery/mockery": "dev-master@dev",
     "squizlabs/php_codesniffer": "1.*",
     "phpmd/phpmd" : "1.4.*",
     "twig/twig": "1.*"
