--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_script:
   - composer install --dev
   - mkdir -p build/logs
 
-script: phpunit --bootstrap tests/bootstrap.php --no-configuration --coverage-clover build/logs/clover.xml --exclude-group ignore --exclude-group yaml tests
+script: phpunit --bootstrap tests/bootstrap.php --no-configuration --coverage-clover build/logs/clover.xml --exclude-group ignore,yaml tests
 
 after_script:
  - php vendor/bin/coveralls -v
