--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,9 @@
   "require-dev": {
     "phpunit/phpunit": "3.7.*",
     "mockery/mockery": "dev-master@dev",
-    "squizlabs/php_codesniffer": "1.*",
-    "phpmd/phpmd" : "1.4.*",
-    "twig/twig": "1.*",
     "athletic/athletic": "~0.1",
-    "symfony/yaml": "2.4.*@dev"
+    "symfony/yaml": "2.4.*@dev",
+    "satooshi/php-coveralls": "dev-master"
   },
   "autoload": {
     "psr-0": {
