--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ php:
   - "5.4"
   - "5.3"
 env:
-  - ES_TEST_HOST=http://localhost:9200/
+  - ES_TEST_HOST=http://localhost:9200
 
 before_script:
   - composer install --dev
