--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "mockery/mockery": "dev-master@dev",
     "athletic/athletic": "~0.1",
     "symfony/yaml": "2.4.*@dev",
-    "satooshi/php-coveralls": "dev-master"
+    "satooshi/php-coveralls": "dev-master",
+    "mikey179/vfsStream": "1.3.*@dev"
   },
   "autoload": {
     "psr-0": {
