--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "php": ">=5.3.9",
     "monolog/monolog": "~1.5",
     "pimple/pimple": "~1.0",
-    "guzzle/guzzle": "~3.7"
+    "guzzle/guzzle": "~3.7",
+    "psr/log": "~1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "3.7.*",
