Add rest-spec parser/generator
Re-adding the old parser/generator to programmatically generate
endpoints.  Several tweaks to get it back up to speed compared
to the old version

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     "symfony/yaml": "2.4.*@dev",
     "satooshi/php-coveralls": "dev-master",
     "mikey179/vfsStream": "~1.2",
+    "twig/twig": "1.*",
     "elasticsearch/elasticsearch_src" : "dev-master"
   },
   "autoload": {
