--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "satooshi/php-coveralls": "dev-master",
     "mikey179/vfsStream": "~1.2",
     "twig/twig": "1.*",
-    "elasticsearch/elasticsearch_src" : "dev-master"
+    "cpliakas/git-wrapper": "~1.0"
   },
   "autoload": {
     "psr-0": {
@@ -33,20 +33,5 @@
       "Elasticsearch\\Tests" : "tests/",
       "Elasticsearch\\Benchmarks" : "benchmarks/"
     }
-  },
-  "repositories":[
-    {
-      "type":"package",
-      "package":{
-        "name":"elasticsearch/elasticsearch_src",
-        "description":"elasticsearch",
-        "version":"dev-master",
-        "source":{
-          "type" : "git",
-          "url":"git://github.com/elasticsearch/elasticsearch.git",
-          "reference" : "550c4079949baabef17e5a7845aadf36dccb41af"
-        }
-      }
-    }
-  ]
+  }
 }
