--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "phpunit/phpunit": "3.7.*",
     "mockery/mockery": "dev-master@dev",
     "athletic/athletic": "~0.1",
-    "symfony/yaml": "2.4.*@dev",
+    "symfony/yaml": "2.4.3 as 2.4.2",
     "satooshi/php-coveralls": "dev-master",
     "mikey179/vfsStream": "~1.2",
     "twig/twig": "1.*",
@@ -33,5 +33,11 @@
       "Elasticsearch\\Tests" : "tests/",
       "Elasticsearch\\Benchmarks" : "benchmarks/"
     }
-  }
+  },
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/polyfractal/Yaml"
+    }
+  ]
 }
