--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
     "ext-curl": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "3.7.*",
+    "task/task": "~0.5",
+    "task/phpunit": "~0.2",
+    "task/process": "~0.1",
     "mockery/mockery": "dev-master@dev",
     "athletic/athletic": "~0.1",
     "symfony/yaml": "2.4.3 as 2.4.2",
