--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,15 @@
 language: php
 php:
-  - "5.5"
-  - "5.4"
-  - "5.3"
+  - 5.3
+  - 5.4
+  - 5.5
+  - 5.6
+  - hhvm
+ 
+matrix:
+    allow_failures:
+        - php: hhvm
+
 env:
   - ES_VERSION=0.90.0 ES_TEST_HOST=http://localhost:9200
   - ES_VERSION=0.90.1 ES_TEST_HOST=http://localhost:9200
