--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,10 @@
     }
   ],
   "require": {
-    "php": ">=5.3.9",
-    "monolog/monolog": "~1.11",
-    "pimple/pimple": "~3.0",
-    "guzzle/http": "~3.7",
+    "php": ">=5.4",
     "psr/log": "~1.0",
-    "ext-curl": "*"
+    "ext-curl": "*",
+    "guzzlehttp/ringphp" : "~1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "3.7.*",
