Move from guzzle/http to guzzle/guzzle
guzzle/http was previously used because it is a lighter dependency than guzzle/guzzle.  ES-PHP
only uses the http components, so there was no need for everything else.

Unfortunately (but understandably), guzzle/http has been abandoned.  Moving to guzzle/guzzle in
case there are any major bugfixes in the future, although guzzle3 is basically deprecated too.

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "php": ">=5.3.9",
     "monolog/monolog": "~1.11",
     "pimple/pimple": "~3.0",
-    "guzzle/http": "~3.7",
+    "guzzle/guzzle": "~3.0",
     "psr/log": "~1.0",
     "ext-curl": "*"
   },
