Composer: PSR-4 + autoload-dev

--- a/composer.json
+++ b/composer.json
@@ -28,10 +28,14 @@
     "cpliakas/git-wrapper": "~1.0"
   },
   "autoload": {
-    "psr-0": {
-      "Elasticsearch": "src/",
-      "Elasticsearch\\Tests" : "tests/",
-      "Elasticsearch\\Benchmarks" : "benchmarks/"
+    "psr-4": {
+      "Elasticsearch\\": "src/Elasticsearch/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Elasticsearch\\Tests\\":      "tests/Elasticsearch/Tests/",
+      "Elasticsearch\\Benchmarks\\": "benchmarks/Elasticsearch/Benchmarks/"
     }
   },
   "repositories": [
