--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "3.7.*",
-    "mockery/mockery": "dev-master@dev",
+    "mockery/mockery": "0.9.4",
     "athletic/athletic": "~0.1",
     "symfony/yaml": "2.4.3 as 2.4.2",
     "satooshi/php-coveralls": "dev-master",
