--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,19 @@
 language: php
+
 php:
-  - "5.5"
-  - "5.4"
-  - "5.3"
+  - 7.0
+  - 5.6
+  - 5.5
+  - 5.4
+  - 5.3
+  - hhvm
+
+matrix:
+  fast_finish: true
+  allow_failures:
+    - php: 7.0
+    - php: hhvm
+
 env:
   - ES_VERSION=0.90.0 ES_TEST_HOST=http://localhost:9200
   - ES_VERSION=0.90.1 ES_TEST_HOST=http://localhost:9200
@@ -12,10 +23,11 @@ env:
   - ES_VERSION=0.90.5 ES_TEST_HOST=http://localhost:9200
 
 before_script:
-  - composer install --dev
+  - composer install
   - mkdir -p build/logs
 
-script: ./run_travis_test.sh
+script:
+  - ./run_travis_test.sh
 
 after_script:
- - php vendor/bin/coveralls -v
+  - php vendor/bin/coveralls -v
