--- a/.travis.yml
+++ b/.travis.yml
@@ -14,21 +14,23 @@ matrix:
   fast_finish: true
   include:
     - php: 5.6
-      env: ES_VERSION="1.6.2"
+      env: ES_VERSION="1.6.2" TEST_BUILD_REF="origin/1.6"
     - php: 5.6
-      env: ES_VERSION="1.5.2"
+      env: ES_VERSION="1.5.2" TEST_BUILD_REF="origin/1.5"
     - php: 5.6
-      env: ES_VERSION="1.4.5"
+      env: ES_VERSION="1.4.5" TEST_BUILD_REF="origin/1.4"
     - php: 5.6
-      env: ES_VERSION="1.3.9"
+      env: ES_VERSION="1.3.9" TEST_BUILD_REF="origin/1.3"
 
 env:
   global:
     - ES_VERSION="1.7.1"
+    - TEST_BUILD_REF="origin/1.7"
     - ES_TEST_HOST=http://localhost:9200
 
 before_install:
   - ./travis/download_run_es.sh
+  - php ./util/RestSpecRunner.php
 
 install:
   - composer install --prefer-source
