--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,9 @@ matrix:
       env: ES_VERSION="1.6" TEST_BUILD_REF="origin/1.6"
     - php: 5.6
       env: ES_VERSION="1.5" TEST_BUILD_REF="origin/1.5"
+  allow_failures:
+    - php: hhvm
+    - php: 7.0
 
 env:
   global:
