--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ matrix:
   fast_finish: true
   include:
     - php: 5.6
+      env: ES_VERSION="2.0" TEST_BUILD_REF="origin/2.0"
+    - php: 5.6
       env: ES_VERSION="1.7" TEST_BUILD_REF="origin/1.7"
     - php: 5.6
       env: ES_VERSION="1.6" TEST_BUILD_REF="origin/1.6"
@@ -28,8 +30,8 @@ matrix:
 
 env:
   global:
-    - ES_VERSION="2.0"
-    - TEST_BUILD_REF="origin/2.0"
+    - ES_VERSION="2.1"
+    - TEST_BUILD_REF="origin/2.1"
     - ES_TEST_HOST=http://localhost:9200
 
 before_install:
