--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   "require": {
     "php": ">=5.4",
     "psr/log": "~1.0",
-    "guzzlehttp/ringphp" : "~1.0"
+    "guzzlehttp/ringphp" : "~1.0",
+    "php-http/message-factory": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.7",
@@ -20,7 +21,9 @@
     "athletic/athletic": "~0.1",
     "symfony/yaml": "2.4.3 as 2.4.2",
     "twig/twig": "1.*",
-    "cpliakas/git-wrapper": "~1.0"
+    "cpliakas/git-wrapper": "~1.0",
+    "guzzlehttp/psr7": "^1.2",
+    "php-http/message": "^1.0"
   },
   "suggest": {
     "ext-curl": "*",
