--- a/.travis.yml
+++ b/.travis.yml
@@ -13,24 +13,11 @@ php:
   - 5.4
   - hhvm
 
-matrix:
-  fast_finish: true
-  include:
-    - php: 5.6
-      env: ES_VERSION="2.1" TEST_BUILD_REF="origin/2.1"
-    - php: 5.6
-      env: ES_VERSION="2.0" TEST_BUILD_REF="origin/2.0"
-    - php: 5.6
-      env: ES_VERSION="1.7" TEST_BUILD_REF="origin/1.7"
-    - php: 5.6
-      env: ES_VERSION="1.6" TEST_BUILD_REF="origin/1.6"
-  allow_failures:
-    - php: hhvm
 
 env:
   global:
-    - ES_VERSION="2.2"
-    - TEST_BUILD_REF="origin/2.2"
+    - ES_VERSION="master"
+    - TEST_BUILD_REF="origin/master"
     - ES_TEST_HOST=http://localhost:9200
 
 before_install:
