[TEST] More Java8 JRE tweaks

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
 language: php
 
+jdk:
+  - oraclejdk8
+
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
+
 branches:
   except:
     - 0.4
