[TEST] (Hundred and one time's a charm) more Java8 JRE tweaks

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ language: php
 jdk:
   - oraclejdk8
 
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
+
 branches:
   except:
     - 0.4
@@ -22,9 +27,9 @@ env:
     - ES_VERSION="master"
     - TEST_BUILD_REF="origin/master"
     - ES_TEST_HOST=http://localhost:9200
+    - JAVA_HOME="/usr/lib/jvm/java-8-oracle/jre"
 
 before_install:
-  - java install oraclejdk8
   - ./travis/download_and_run_es.sh
 
 install:
