--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ branches:
   except:
     - 0.4
 
-sudo: false
+sudo: true
 
 php:
   - 7.0
@@ -30,6 +30,7 @@ env:
     - JAVA_HOME="/usr/lib/jvm/java-8-oracle/jre"
 
 before_install:
+  - sudo update-java-alternatives -s java-8-oracle
   - ./travis/download_and_run_es.sh
 
 install:
