--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ env:
 
 before_install:
   - sudo update-java-alternatives -s java-8-oracle
+  - sudo ulimit -l unlimited
   - ./travis/download_and_run_es.sh
 
 install:
