Separate integration tests and refactor the YamlRunnerTest class

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,7 @@ before_script:
 
 script:
   - vendor/bin/phpunit $PHPUNIT_FLAGS
+  - vendor/bin/phpunit -c phpunit-integration.xml $PHPUNIT_FLAGS
 
 after_script:
   - if [ $TRAVIS_PHP_VERSION = '7.0' ]; then php vendor/bin/coveralls; fi
