--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,11 @@
   "require-dev": {
     "phpunit/phpunit": "~4.7",
     "mockery/mockery": "0.9.4",
-    "symfony/yaml": "2.4.3 as 2.4.2",
+    "symfony/yaml": "^2.8",
+    "symfony/finder": "^2.8",
     "cpliakas/git-wrapper": "~1.0",
-    "sami/sami": "~3.2"
+    "sami/sami": "~3.2",
+    "doctrine/inflector": "^1.1"
   },
   "suggest": {
     "ext-curl": "*",
@@ -34,11 +36,5 @@
     "psr-4": {
       "Elasticsearch\\Tests\\":      "tests/Elasticsearch/Tests/"
     }
-  },
-  "repositories": [
-    {
-      "type": "vcs",
-      "url": "https://github.com/polyfractal/Yaml"
-    }
-  ]
+  }
 }
