--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,13 @@
   "require": {
     "php": "^5.6|^7.0",
     "psr/log": "~1.0",
-    "guzzlehttp/ringphp" : "~1.0"
+    "guzzlehttp/ringphp" : "~1.0",
+    "psr/http-message": "^1.0",
+    "php-http/httplug": "^1.0",
+    "php-http/logger-plugin": "^1.0",
+    "php-http/client-common": "dev-master",
+    "php-http/discovery": "^1.0",
+    "php-http/message-factory": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^4.7|^5.4",
@@ -21,7 +27,10 @@
     "symfony/finder": "^2.8",
     "cpliakas/git-wrapper": "~1.0",
     "sami/sami": "~3.2",
-    "doctrine/inflector": "^1.1"
+    "doctrine/inflector": "^1.1",
+    "php-http/socket-client": "^1.2",
+    "php-http/message": "^1.3",
+    "guzzlehttp/psr7": "^1.3"
   },
   "suggest": {
     "ext-curl": "*",
