--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
     }
   ],
   "require": {
-    "php": ">=5.4",
+    "php": "^5.6|^7.0",
     "psr/log": "~1.0",
     "guzzlehttp/ringphp" : "~1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.7",
+    "phpunit/phpunit": "^4.7|^5.4",
     "mockery/mockery": "0.9.4",
     "symfony/yaml": "^2.8",
     "symfony/finder": "^2.8",
