--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
   ],
   "require": {
     "php": "^5.6|^7.0",
-    "psr/log": "~1.0",
-    "guzzlehttp/ringphp" : "~1.0",
+    "psr/log": "^1.0",
     "psr/http-message": "^1.0",
     "php-http/httplug": "^1.0",
     "php-http/logger-plugin": "^1.0",
@@ -22,12 +21,12 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^4.7|^5.4",
-    "mockery/mockery": "0.9.4",
     "symfony/yaml": "^2.8",
     "symfony/finder": "^2.8",
     "cpliakas/git-wrapper": "~1.0",
     "sami/sami": "~3.2",
     "doctrine/inflector": "^1.1",
+    "monolog/monolog": "^1.21",
     "php-http/socket-client": "^1.2",
     "php-http/message": "^1.3",
     "guzzlehttp/psr7": "^1.3"
