--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
   ],
   "require": {
     "php": "^5.6.6|^7.0",
+    "ext-json": ">=1.3.7",
     "psr/log": "~1.0",
     "guzzlehttp/ringphp" : "~1.0"
   },
