--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ env:
     - JAVA_HOME="/usr/lib/jvm/java-8-oracle/jre"
 
 before_install:
-  - if [ $TRAVIS_PHP_VERSION = '5.6' ]; then pecl uninstall json && pecl install json-1.3.7; fi
+  - if [ $TRAVIS_PHP_VERSION = '5.6' ]; then sudo apt-get -y install php5-json; fi
   - sudo update-java-alternatives -s java-8-oracle
   - ./travis/download_and_run_es.sh
 
