--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   ],
   "require": {
-    "php": "^5.6.6|^7.0",
+    "php": "^5.6.6|^7.*",
     "ext-json": ">=1.3.7",
     "psr/log": "~1.0",
     "guzzlehttp/ringphp" : "~1.0"
