--- a/.travis.yml
+++ b/.travis.yml
@@ -52,6 +52,7 @@ before_script:
   - php util/EnsureClusterAlive.php
 
 script:
+  - composer run-script phpstan
   - vendor/bin/phpunit $PHPUNIT_FLAGS
   - vendor/bin/phpunit -c phpunit-integration.xml --group sync $PHPUNIT_FLAGS
 
