--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "guzzlehttp/ringphp" : "~1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^4.7|^5.4",
+    "phpunit/phpunit": "5.7.21",
     "mockery/mockery": "0.9.4",
     "symfony/yaml": "^2.8",
     "symfony/finder": "^2.8",
