--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "php": "^7.0",
     "ext-json": ">=1.3.7",
     "psr/log": "~1.0",
-    "guzzlehttp/ringphp" : "~1.0"
+    "guzzlehttp/ringphp" : "~1.0",
+    "vlucas/phpdotenv": "^2.4"
   },
   "require-dev": {
     "phpunit/phpunit": "^4.7|^5.4",
