--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "mockery/mockery": "0.9.4",
     "phpstan/phpstan-shim": "0.8.3",
     "phpunit/phpunit": "6.3.0",
+    "squizlabs/php_codesniffer": "3.0.2",
     "symfony/finder": "^2.8",
     "symfony/yaml": "^2.8"
   },
@@ -42,6 +43,9 @@
     "sort-packages": true
   },
   "scripts": {
+    "phpcs": [
+      "phpcs --standard=ruleset.xml --extensions=php --encoding=utf-8 --tab-width=4 -sp tests"
+    ],
     "phpstan": [
       "@php vendor/phpstan/phpstan-shim/phpstan.phar analyse -c phpstan.neon tests --level 7 --no-progress"
     ]
