sort dependencies in composer.json
It will prevent some unnecessary future merge conflicts

--- a/composer.json
+++ b/composer.json
@@ -12,17 +12,17 @@
   "require": {
     "php": "^7.0",
     "ext-json": ">=1.3.7",
-    "psr/log": "~1.0",
-    "guzzlehttp/ringphp" : "~1.0"
+    "guzzlehttp/ringphp": "~1.0",
+    "psr/log": "~1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "6.3.0",
-    "mockery/mockery": "0.9.4",
-    "symfony/yaml": "^2.8",
-    "symfony/finder": "^2.8",
     "cpliakas/git-wrapper": "~1.0",
     "doctrine/inflector": "^1.1",
-    "phpstan/phpstan-shim": "0.8.3"
+    "mockery/mockery": "0.9.4",
+    "phpstan/phpstan-shim": "0.8.3",
+    "phpunit/phpunit": "6.3.0",
+    "symfony/finder": "^2.8",
+    "symfony/yaml": "^2.8"
   },
   "suggest": {
     "ext-curl": "*",
@@ -37,6 +37,9 @@
     "psr-4": {
       "Elasticsearch\\Tests\\":      "tests/Elasticsearch/Tests/"
     }
+  },
+  "config": {
+    "sort-packages": true
   },
   "scripts": {
     "phpstan": [
