--- a/composer.json
+++ b/composer.json
@@ -12,16 +12,18 @@
   "require": {
     "php": "^7.0",
     "ext-json": ">=1.3.7",
-    "psr/log": "~1.0",
-    "guzzlehttp/ringphp" : "~1.0"
+    "guzzlehttp/ringphp": "~1.0",
+    "psr/log": "~1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^4.7|^5.4",
-    "mockery/mockery": "0.9.4",
-    "symfony/yaml": "^2.8",
-    "symfony/finder": "^2.8",
     "cpliakas/git-wrapper": "~1.0",
-    "doctrine/inflector": "^1.1"
+    "doctrine/inflector": "^1.1",
+    "mockery/mockery": "0.9.4",
+    "phpstan/phpstan-shim": "0.8.3",
+    "phpunit/phpunit": "6.3.0",
+    "squizlabs/php_codesniffer": "3.0.2",
+    "symfony/finder": "^2.8",
+    "symfony/yaml": "^2.8"
   },
   "suggest": {
     "ext-curl": "*",
@@ -36,5 +38,16 @@
     "psr-4": {
       "Elasticsearch\\Tests\\":      "tests/Elasticsearch/Tests/"
     }
+  },
+  "config": {
+    "sort-packages": true
+  },
+  "scripts": {
+    "phpcs": [
+      "phpcs --standard=ruleset.xml --extensions=php --encoding=utf-8 --tab-width=4 -sp tests"
+    ],
+    "phpstan": [
+      "@php vendor/phpstan/phpstan-shim/phpstan.phar analyse -c phpstan.neon tests --level 7 --no-progress"
+    ]
   }
 }
