ClientBuilder: setLogger() and setTracer() only accept \Psr\Log\LoggerInterface
This is a more verbose approach than directly adding typehints, but it
won't break the projects which may be extending ClientBuilder.

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -7,3 +7,6 @@ parameters:
         # because of \Elasticsearch\Tests\RegisteredNamespaceTest
         - '#Call to an undefined method Elasticsearch\\Client::foo\(\)#'
         - '#Call to an undefined method Elasticsearch\\Client::bar\(\)#'
+
+        # because of \Elasticsearch\Tests\ClientBuilderTest
+        - '#expects Psr\\Log\\LoggerInterface, Elasticsearch\\Tests\\ClientBuilder\\DummyLogger given.$#'
