--- a/phpstan-src.neon
+++ b/phpstan-src.neon
@@ -1,2 +1,6 @@
 parameters:
     ignoreErrors:
+
+        # nullable types are missing everywhere
+        # this should be removed and fixed in the code later
+        - '#Variable (.*) in isset\(\) always exists and is not nullable.#'
