--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "cpliakas/git-wrapper": "~1.0",
     "doctrine/inflector": "^1.1",
     "mockery/mockery": "0.9.4",
-    "phpstan/phpstan-shim": "0.8.3",
+    "phpstan/phpstan-shim": "0.8.5",
     "phpunit/phpunit": "6.3.0",
     "squizlabs/php_codesniffer": "3.0.2",
     "symfony/finder": "^2.8",
@@ -48,7 +48,8 @@
       "phpcs --standard=ruleset.xml --extensions=php --encoding=utf-8 --tab-width=4 -sp tests"
     ],
     "phpstan": [
-      "@php vendor/phpstan/phpstan-shim/phpstan.phar analyse -c phpstan.neon tests --level 7 --no-progress"
+      "@php vendor/phpstan/phpstan-shim/phpstan.phar analyse -c phpstan-src.neon src --level 2 --no-progress",
+      "@php vendor/phpstan/phpstan-shim/phpstan.phar analyse -c phpstan-tests.neon tests --level 7 --no-progress"
     ]
   }
 }
