--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,14 @@
     "psr/log": "~1.0"
   },
   "require-dev": {
-    "cpliakas/git-wrapper": "~1.0",
-    "doctrine/inflector": "^1.1",
+    "cpliakas/git-wrapper": "1.7.0",
+    "doctrine/inflector": "1.2.0",
     "mockery/mockery": "0.9.4",
     "phpstan/phpstan-shim": "0.9.1",
     "phpunit/phpunit": "6.3.0",
     "squizlabs/php_codesniffer": "3.0.2",
-    "symfony/finder": "^2.8",
-    "symfony/yaml": "^2.8"
+    "symfony/finder": "2.8.32",
+    "symfony/yaml": "2.8.32"
   },
   "suggest": {
     "ext-curl": "*",
