[travis] use very specific ES version for build

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,20 +18,20 @@ matrix:
   fast_finish: true
   include:
     - php: 7.0
-      env: ES_VERSION="6.0"
+      env: ES_VERSION="6.0.1"
     - php: 7.0
-      env: ES_VERSION="6.x"
+      env: ES_VERSION="6.1.1"
 
     - php: 7.1
-      env: ES_VERSION="6.0"
+      env: ES_VERSION="6.0.1"
     - php: 7.1
-      env: ES_VERSION="6.x"
+      env: ES_VERSION="6.1.1"
 
     - php: 7.2
-      env: ES_VERSION="6.0"
+      env: ES_VERSION="6.0.1"
 
   allow_failures:
-    - env: ES_VERSION="6.x"
+    - env: ES_VERSION="6.1.1"
 
 env:
   global:
