Build also against ES 6.3
https://www.elastic.co/blog/elasticsearch-6-3-0-released

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,8 @@ matrix:
     - php: 7.2
       env: ES_VERSION="6.2"
     - php: 7.2
+      env: ES_VERSION="6.3"
+    - php: 7.2
       env: ES_VERSION="6.x"
 
   allow_failures:
