--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   "require-dev": {
     "cpliakas/git-wrapper": "~1.0",
     "doctrine/inflector": "^1.1",
-    "mockery/mockery": "0.9.4",
+    "mockery/mockery": "^1.2",
     "phpstan/phpstan-shim": "0.9.1",
     "phpunit/phpunit": "6.3.0",
     "squizlabs/php_codesniffer": "3.0.2",
