fixed php 7.3 compatibiltiy for elasticsearch 2

--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
   "repositories": [
     {
       "type": "vcs",
-      "url": "https://github.com/polyfractal/Yaml"
+      "url": "https://github.com/polyfractal/Yaml.git"
     }
   ]
 }
