fix problems with travis github limit

--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
   },
   "repositories": [
     {
-      "type": "vcs",
+      "type": "git",
       "url": "https://github.com/polyfractal/Yaml"
     }
   ]
