--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ branches:
 sudo: false
 
 php:
+  - 7.3
+  - 7.2
+  - 7.1
   - 7.0
   - 5.6
   - 5.5
@@ -33,7 +36,7 @@ before_install:
   - ./travis/download_and_run_es.sh
 
 install:
-  - composer install --prefer-source
+  - composer install --prefer-dist
 
 before_script:
   - if [ $TRAVIS_PHP_VERSION = '7.0' ]; then PHPUNIT_FLAGS="--coverage-clover ./build/logs/clover.xml"; fi
