Fix integration tests using docker

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,7 +9,7 @@
         beStrictAboutOutputDuringTests="true"
 >
     <php>
-        <server name="ES_TEST_HOST" value="http://localhost:9200"/>
+        <env name="ES_TEST_HOST" value=""/>
     </php>
     <testsuites>
         <testsuite name="Tests">
