--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,7 @@
 language: php
 
-jdk:
-  - oraclejdk8
-
-addons:
-  apt:
-    packages:
-      - oracle-java8-installer
+services:
+  - docker
 
 branches:
   except:
@@ -43,11 +38,9 @@ matrix:
 env:
   global:
     - ES_TEST_HOST=http://localhost:9200
-    - JAVA_HOME="/usr/lib/jvm/java-8-oracle/jre"
 
 before_install:
-  - sudo update-java-alternatives -s java-8-oracle
-  - ./travis/download_and_run_es.sh
+  - ./travis/run_es_docker.sh
 
 install:
   - composer install --prefer-dist
@@ -65,3 +58,6 @@ script:
 
 after_script:
   - if [ $TRAVIS_PHP_VERSION = '7.3' ]; then php vendor/bin/coveralls; fi
+
+notifications:
+  email: true
