--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
   "license": "Apache-2.0",
   "authors": [
     {
-      "name": "Zachary Tong"
+        "name": "Zachary Tong"
+    },
+    {
+        "name": "Enrico Zimuel"
     }
   ],
   "require": {
@@ -18,8 +21,8 @@
   "require-dev": {
     "cpliakas/git-wrapper": "~1.0",
     "doctrine/inflector": "^1.1",
-    "mockery/mockery": "0.9.4",
-    "phpstan/phpstan-shim": "0.9.1",
+    "mockery/mockery": "^1.2",
+    "phpstan/phpstan-shim": "^0.9",
     "phpunit/phpunit": "6.3.0",
     "squizlabs/php_codesniffer": "3.0.2",
     "symfony/finder": "^2.8",
@@ -36,7 +39,8 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Elasticsearch\\Tests\\":      "tests/Elasticsearch/Tests/"
+      "Elasticsearch\\Tests\\": "tests/Elasticsearch/Tests/",
+      "Elasticsearch\\IntegrationTests\\": "tests/Elasticsearch/IntegrationTests/"
     }
   },
   "config": {
@@ -48,8 +52,7 @@
       "phpcs --standard=ruleset.xml --extensions=php --encoding=utf-8 --tab-width=4 -sp tests"
     ],
     "phpstan": [
-      "@php vendor/phpstan/phpstan-shim/phpstan.phar analyse -c phpstan-src.neon src --level 2 --no-progress",
-      "@php vendor/phpstan/phpstan-shim/phpstan.phar analyse -c phpstan-tests.neon tests --level 7 --no-progress"
+      "@php vendor/phpstan/phpstan-shim/phpstan.phar analyse -c phpstan-src.neon src --level 2 --no-progress"
     ]
   }
 }
