--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,9 @@
     "cpliakas/git-wrapper": "~1.0",
     "doctrine/inflector": "^1.1",
     "mockery/mockery": "^1.2",
-    "phpstan/phpstan-shim": "^0.9",
-    "phpunit/phpunit": "6.3.0",
-    "squizlabs/php_codesniffer": "3.0.2",
+    "phpstan/phpstan-shim": "^0.9 || ^0.11",
+    "phpunit/phpunit": "^5.7 || ^6.5",
+    "squizlabs/php_codesniffer": "^3.4",
     "symfony/finder": "^2.8",
     "symfony/yaml": "^2.8"
   },
