--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ matrix:
       env: ES_VERSION="7.1.0"
     - php: 7.3
       env: ES_VERSION="7.1.0"
+    - php: 7.3
+      env: ES_VERSION="7.2.0"
   allow_failures:
     - php: 7.3
       env: ES_VERSION="7.2.0"
