--- a/.travis.yml
+++ b/.travis.yml
@@ -17,22 +17,20 @@ matrix:
   fast_finish: true
   include:
     - php: 7.1
-      env: ES_VERSION="7.2.0"
+      env: ES_VERSION="7.3.2"
     - php: 7.2
-      env: ES_VERSION="7.2.0"
+      env: ES_VERSION="7.3.2"
     - php: 7.3
-      env: ES_VERSION="7.2.0"
-    - php: 7.1
-      env: ES_VERSION="7.2.1"
-    - php: 7.2
-      env: ES_VERSION="7.2.1"
+      env: ES_VERSION="7.3.2"
     - php: 7.3
       env: ES_VERSION="7.2.1"
     - php: 7.3
-      env: ES_VERSION="7.3.0"
+      env: ES_VERSION="8.0.0-SNAPSHOT"
   allow_failures:
     - php: 7.3
-      env: ES_VERSION="7.3.0"
+      env: ES_VERSION="7.2.1"  
+    - php: 7.3
+      env: ES_VERSION="8.0.0-SNAPSHOT"
 
 env:
   global:
