Fix pre 7.2 endpoint class name with aliases + reapply fix #947

--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,9 @@
     "monolog/monolog": "Allows for client-level logging and tracing"
   },
   "autoload": {
+    "files": [
+      "src/autoload.php"
+    ],
     "psr-4": {
       "Elasticsearch\\": "src/Elasticsearch/"
     }
