--- a/.travis.yml
+++ b/.travis.yml
@@ -24,12 +24,14 @@ matrix:
       env: ES_VERSION="7.4.2"
     - php: 7.3
       env: ES_VERSION="8.0.0-SNAPSHOT"
-    - php: 7.4
+    - php: 7.4psnapshot
       env: ES_VERSION="7.4.2"
-    - php: 7.4
+    - php: 7.4snapshot
       env: ES_VERSION="8.0.0-SNAPSHOT"
   allow_failures:
     - php: 7.3
+      env: ES_VERSION="8.0.0-SNAPSHOT"
+    - php: 7.4snapshot
       env: ES_VERSION="8.0.0-SNAPSHOT"
 
 env:
