Replace abandoned packages: ringphp, phpstan-shim

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,13 +17,13 @@ matrix:
   fast_finish: true
   include:
     - php: 7.1
-      env: ES_VERSION="7.5.1"
+      env: ES_VERSION="7.5.2"
     - php: 7.2
-      env: ES_VERSION="7.5.1"
+      env: ES_VERSION="7.5.2"
     - php: 7.3
-      env: ES_VERSION="7.5.1"
+      env: ES_VERSION="7.5.2"
     - php: 7.4
-      env: ES_VERSION="7.5.1"
+      env: ES_VERSION="7.5.2"
     - php: 7.4
       env: ES_VERSION="8.0.0-SNAPSHOT"
   allow_failures:
@@ -47,10 +47,7 @@ before_script:
 
 script:
   - if [ $TRAVIS_PHP_VERSION != '7.4' ]; then composer run-script phpcs; fi
-  - if [ $TRAVIS_PHP_VERSION = '7.1' ]; then composer run-script phpstan7.1; fi
-  - if [ $TRAVIS_PHP_VERSION = '7.2' ]; then composer run-script phpstan7.1; fi
-  - if [ $TRAVIS_PHP_VERSION = '7.3' ]; then composer run-script phpstan; fi
-  - if [ $TRAVIS_PHP_VERSION = '7.4' ]; then composer run-script phpstan; fi
+  - composer run-script phpstan
   - vendor/bin/phpunit $PHPUNIT_FLAGS
   - vendor/bin/phpunit -c phpunit-integration.xml --group sync $PHPUNIT_FLAGS
 
