--- a/composer.json
+++ b/composer.json
@@ -12,17 +12,28 @@
         "name": "Enrico Zimuel"
     }
   ],
+  "repositories": [
+    {
+        "type": "vcs",
+        "url": "https://github.com/ezimuel/RingPHP"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/ezimuel/streams"
+    }
+  ],
   "require": {
     "php": "^7.1",
     "ext-json": ">=1.3.7",
-    "guzzlehttp/ringphp": "~1.0",
+    "guzzlehttp/ringphp": "dev-fork-elasticsearch",
+    "guzzlehttp/streams": "@dev",
     "psr/log": "~1.0"
   },
   "require-dev": {
     "cpliakas/git-wrapper": "~2.0",
     "doctrine/inflector": "^1.3",
     "mockery/mockery": "^1.2",
-    "phpstan/phpstan-shim": "^0.11",
+    "phpstan/phpstan": "^0.12",
     "phpunit/phpunit": "^7.5",
     "squizlabs/php_codesniffer": "^3.4",
     "symfony/finder": "~4.0",
@@ -56,10 +67,10 @@
       "phpcs --standard=ruleset.xml --extensions=php --encoding=utf-8 --tab-width=4 -sp tests"
     ],
     "phpstan7.1": [
-      "@php vendor/phpstan/phpstan-shim/phpstan.phar analyse -c phpstan-src-71.neon src --level 2 --no-progress"
+      "@php vendor/bin/phpstan analyse -c phpstan-src-71.neon src --level 2 --no-progress"
     ],
     "phpstan": [
-      "@php vendor/phpstan/phpstan-shim/phpstan.phar analyse -c phpstan-src.neon src --level 2 --no-progress"
+      "@php vendor/bin/phpstan analyse -c phpstan-src.neon src --level 2 --no-progress"
     ]
   }
 }
