--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ before_install:
   - ./travis/run_es_docker.sh
 
 install:
-  - composer install --prefer-dist
+  - composer install --prefer-dist --no-interaction
 
 before_script:
   - if [ $TRAVIS_PHP_VERSION = '7.4' ]; then PHPUNIT_FLAGS="--coverage-clover ./build/logs/clover.xml"; fi
