--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,3 +1,4 @@
 parameters:
     ignoreErrors:
         - '#Unsafe usage of new static()#'
+        - '#Call to static method performRequest\(\) on trait#'
