--- a/.ci/jobs/defaults.yml
+++ b/.ci/jobs/defaults.yml
@@ -14,7 +14,7 @@
       numToKeep: 100
     properties:
     - github:
-        url: https://github.com/elastic/elasticsearch-js/
+        url: https://github.com/elastic/elasticsearch-php/
     - inject:
         properties-content: HOME=$JENKINS_HOME
     concurrent: true
@@ -23,10 +23,10 @@
     - git:
         name: origin
         credentials-id: f6c7695a-671e-4f4f-a331-acdce44ff9ba
-        reference-repo: /var/lib/jenkins/.git-references/elasticsearch-js.git
+        reference-repo: /var/lib/jenkins/.git-references/elasticsearch-php.git
         branches:
         - ${branch_specifier}
-        url: https://github.com/elastic/elasticsearch-js.git
+        url: https://github.com/elastic/elasticsearch-php.git
         wipe-workspace: 'True'
     triggers:
     - github
@@ -46,7 +46,7 @@
     - axis:
         type: yaml
         filename: .ci/test-matrix.yml
-        name: NODE_JS_VERSION
+        name: PHP_VERSION
     - axis:
         type: yaml
         filename: .ci/test-matrix.yml
