--- a/.ci/jobs/elastic+elasticsearch-php+7.x.yml
+++ b/.ci/jobs/elastic+elasticsearch-php+7.x.yml
@@ -1,12 +1,12 @@
 ---
 - job:
-    name: elastic+elasticsearch-js+5.x
-    display-name: 'elastic / elasticsearch-js # 5.x'
-    description: Testing the elasticsearch-js 5.x branch.
+    name: elastic+elasticsearch-php+7.x
+    display-name: 'elastic / elasticsearch-php # 7.x'
+    description: Testing the elasticsearch-php 7.x branch.
     parameters:
     - string:
         name: branch_specifier
-        default: refs/heads/5.x
+        default: refs/heads/7.x
         description: the Git branch specifier to build (&lt;branchName&gt;, &lt;tagName&gt;,
           &lt;commitId&gt;, etc.)
     triggers:
