--- a/.ci/jobs/elastic+elasticsearch-php+pull-request.yml
+++ b/.ci/jobs/elastic+elasticsearch-php+pull-request.yml
@@ -1,8 +1,8 @@
 ---
 - job:
-    name: elastic+elasticsearch-js+pull-request
-    display-name: 'elastic / elasticsearch-js # pull-request'
-    description: Testing of elasticsearch-js pull requests.
+    name: elastic+elasticsearch-php+pull-request
+    display-name: 'elastic / elasticsearch-php # pull-request'
+    description: Testing of elasticsearch-php pull requests.
     scm:
     - git:
         branches:
