Added YAML test script for CI

--- a/.ci/Dockerfile
+++ b/.ci/Dockerfile
@@ -4,8 +4,6 @@ FROM php:${PHP_VERSION}
 # Create app directory
 WORKDIR /usr/src/app
 
-COPY . .
-
 # Install git
 RUN apt-get update && \
     apt-get install -y --no-install-recommends git
@@ -15,10 +13,9 @@ RUN apt-get install -y \
         libzip-dev \
         zip \
     && docker-php-ext-install zip
-  
+
 # Install composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-# Install dependencies using composer
-RUN composer global require hirak/prestissimo && \
-    composer install --prefer-dist --no-progress --no-interaction
+# Install prestissimo pluing for composer
+RUN composer global require hirak/prestissimo
