Update the docker exec with a separate bash script

--- a/.ci/Dockerfile
+++ b/.ci/Dockerfile
@@ -1,9 +1,6 @@
 ARG PHP_VERSION=7.4-cli
 FROM php:${PHP_VERSION}
 
-# Create app directory
-WORKDIR /usr/src/app
-
 # Install git
 RUN apt-get update && \
     apt-get install -y --no-install-recommends git
@@ -14,8 +11,8 @@ RUN apt-get install -y \
         zip \
     && docker-php-ext-install zip
 
+# Print PHP version
+RUN php -v
+
 # Install composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-
-# Install prestissimo pluing for composer
-RUN composer global require hirak/prestissimo
