Refactored .ci with CMD in Dockerfile

--- a/.ci/Dockerfile
+++ b/.ci/Dockerfile
@@ -1,6 +1,8 @@
 ARG PHP_VERSION=7.4-cli
 FROM php:${PHP_VERSION}
 
+WORKDIR /usr/src/app
+
 # Install git
 RUN apt-get update && \
     apt-get install -y --no-install-recommends git
@@ -16,3 +18,18 @@ RUN php -v
 
 # Install composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+
+# Print composer version
+RUN composer --version
+
+COPY composer.json .
+
+# Install dependencies with composer
+RUN composer global require hirak/prestissimo && composer install
+
+COPY . .
+
+# Updating elasticsearch submodule
+RUN git submodule update --init --recursive
+
+CMD ["bash", ".ci/yaml-tests.sh"]
