Added junit log for phpunit

--- a/.ci/jobs/defaults.yml
+++ b/.ci/jobs/defaults.yml
@@ -69,6 +69,6 @@
     publishers:
     - email:
         recipients: infra-root+build@elastic.co
-    # - junit:
-    #     results: "*-junit.xml"
-    #     allow-empty-results: true
+    - junit:
+        results: "tests/*-junit.xml"
+        allow-empty-results: true
