--- a/.gitattributes
+++ b/.gitattributes
@@ -1,15 +1,15 @@
 # Files to exclude when creating archive
 /tests export-ignore
+/.ci export-ignore
+/.gitattributes export-ignore
 /.github export-ignore
 /.gitmodules export-ignore
 /.gitignore export-ignore
 /.php_cs export-ignore
 /.travis.yml export-ignore
-/.phpstan-src.neon export-ignore
-/.phpstan-src-71.neon export-ignore
-/.phpstan-tests.neon export-ignore
+/.phpstan.neon export-ignore
 /phpunit-integration.xml export-ignore
-/phpunit.xml export-ignore
+/phpunit.xml.dist export-ignore
 /ruleset.xml export-ignore
 /travis export-ignore
 /util export-ignore
