Reintroduced php 7.1 on github action matrix

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        php-version: [7.2, 7.3, 7.4, 8.0]
+        php-version: [7.1, 7.2, 7.3, 7.4, 8.0]
         os: [ubuntu-latest]
         es-version: [7.x-SNAPSHOT]
 
