--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,9 +1,6 @@
 parameters:
-    reportUnmatchedIgnoredErrors:
-        false
+    level: 2
+    paths:
+        - src/
     ignoreErrors:
-        - '#Unsafe usage of new static\(\)#'
-        - '#Call to static method performRequest\(\) on trait#'
-        - '#Constant JSON_THROW_ON_ERROR not found#'
-        - '#Caught class JsonException not found#'
-        - '#Call to method getCode\(\) on an unknown class JsonException#'
+        - '#^Unsafe usage of new static\(\)\.$#'
